[package]
name = "redis-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Web
actix-web = "4.9"

# Db
bb8-redis = "0.16"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
] }

# Cryptography
uuid = { version = "1.7", features = ["serde", "v4"] }

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"

# Other
once_cell = "1.19"
